# sdk-nrf

./: .checkpatch.conf  CODEOWNERS  Kconfig.nrf  west.yml
.github/workflows/: manifest.yml
doc/nrf/: ug_partition_manager.rst
drivers/entropy/: Kconfig
include/: bl_storage.h  fw_info.h  fw_info.rst
include/dfu/: dfu_target_mcuboot.h  dfu_target_modem_full.h  dfu_target_stream.h  pcd.h
modules/tfm/zephyr/: CMakeLists.txt
samples/bootloader/: prj.conf
samples/bootloader/src/: main.c
samples/crypto/aes_cbc/: CMakeLists.txt
samples/crypto/ecdh/: CMakeLists.txt
samples/crypto/persistent_key_usage/: README.rst
samples/nrf9160/http_application_update/: Kconfig  prj.conf
samples/tfm/tfm_hello_world/: prj.conf
samples/trusted_firmware_m/: CMakeLists.txt  README.rst  pm.yml  sample.yaml
scripts/bootloader/: modem_update.py
subsys/: CMakeLists.txt  Kconfig
subsys/bootloader/: CMakeLists.txt  Kconfig  bootloader.c  bootloader.h
subsys/bootloader/bl_crypto/: CMakeLists.txt  bl_crypto.c
subsys/bootloader/bl_crypto_client/: bl_crypto_client.c
subsys/bootloader/bl_storage/: bl_storage.c
subsys/bootloader/bl_validation/: bl_validation.c
subsys/bootloader/cmake/: fw_metadata.cmake
subsys/bootloader/fw_metadata/: Kconfig  fw_metadata.c
subsys/bootloader/include/: bl_crypto.h  fw_metadata.h  linker.ld
subsys/bootloader/provision/: provision_flash.c
subsys/fw_info/: CMakeLists.txt  Kconfig  Kconfig.template.fw_info_abi  abis.ld  fw_info.c
subsys/partition_manager/: Kconfig
subsys/trusted_firmware_m/: CMakeLists.txt  Kconfig
(+18 files in other folders)
